--- a/sys/windows/vs/NetHackProperties.props
+++ b/sys/windows/vs/NetHackProperties.props
@@ -2,10 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <VERSION_MAJOR>3</VERSION_MAJOR>
-    <VERSION_MINOR>7</VERSION_MINOR>
+    <VERSION_MAJOR>9</VERSION_MAJOR>
+    <VERSION_MINOR>0</VERSION_MINOR>
     <PATCHLEVEL>0</PATCHLEVEL>
-    <NETHACK_VERSION>$(VERSION_MAJOR).$(VERSION_MINOR).$(PATCHLEVEL)</NETHACK_VERSION>
+    <XNETHACK_VERSION>$(VERSION_MAJOR).$(VERSION_MINOR).$(PATCHLEVEL)</XNETHACK_VERSION>
     <LUA_MAJOR_VERSION>5</LUA_MAJOR_VERSION>
     <LUA_MINOR_VERSION>4</LUA_MINOR_VERSION>
     <LUA_PATCH_LEVEL>6></LUA_PATCH_LEVEL>
