fix Makefile.nmake when USE_DLB=N

--- a/sys/windows/Makefile.nmake
+++ b/sys/windows/Makefile.nmake
@@ -1731,11 +1731,10 @@ binary.tag: 	$(DAT)data $(DAT)rumors $(DAT)oracles $(DLB) \
 	copy $(DAT)bogusmon $(GAMEDIR)
 	copy $(DAT)cmdhelp $(GAMEDIR)
 	copy $(DAT)data $(GAMEDIR)
-	copy $(DAT)dungeon $(GAMEDIR)
 	copy $(DAT)engrave $(GAMEDIR)
 	copy $(DAT)epitaph $(GAMEDIR)
 	copy $(DAT)help $(GAMEDIR)
-	copy $(DAT)hh $(GAMDEDIR)
+	copy $(DAT)hh $(GAMEDIR)
 	copy $(DAT)history $(GAMEDIR)
 	copy $(DAT)license $(GAMEDIR)
 	copy $(DAT)optmenu $(GAMEDIR)
