musl libc build, rather than glibc
We've had reports of a couple of issues building against musl libc.

Issues reported:
  - build procedures utilize cat for Guidebook-creation, and cat
    is deprecated in distros that use musl libc.

  - some of the CRASHREPORT code is using library functions that
    are not available in the musl libc environment. The reported
    functions were backtrace() and backtrace_symbols(), which use
    header file /usr/include/execinfo.h.

So we'll try to accommodate this. Since we don't have a means of
autodetecting the musl libc situation during the build (as of yet), the
builder will have to specify 'make musl=1' on the make command line.

Specifying 'musl=1' on the make command line will:
1. ensure that NOCRASHREPORT gets defined in the C preprocessor.
2. set COLCMD to be '../util/stripbs' instead of 'col -bx'.

Closes #1393

--- a/sys/unix/Makefile.utl
+++ b/sys/unix/Makefile.utl
@@ -293,6 +293,11 @@ dlb:	$(DLBOBJS) $(HACKLIB)
 dlb_main.o: dlb_main.c $(CONFIG_H) ../include/dlb.h
 	$(CC) $(CFLAGS) $(CSTD) -c dlb_main.c -o $@
 
+stripbs: stripbs.o
+	$(CC) $(LFLAGS) -o stripbs stripbs.o
+
+stripbs.o: stripbs.c
+	$(CC) $(CFLAGS) -c stripbs.c
 
 #	dependencies for tile utilities
 #
