replace some weight-related magic numbers
adds a header file include/nhconst.h  (I'm open to a better name)

--- a/sys/msdos/Makefile.GCC
+++ b/sys/msdos/Makefile.GCC
@@ -415,11 +415,11 @@ DECL_H	   = $(YOU_H)		$(INCL)/spell.h	    $(INCL)/color.h    \
 GLOBAL_H   = $(PCCONF_H)	$(INCL)/coord.h	   $(INCL)/global.h
 HACK_H	   = $(CONFIG_H)	$(INCL)/context.h  $(DUNGEON_H)	       \
 	     $(DECL_H)	      	$(DISPLAY_H)	   $(INCL)/sym.h       \
-	     $(INCL)/defsym.h   $(INCL)/mkroom.h   $(INCL)/objclass.h  \
-	     $(INCL)/trap.h     $(INCL)/flag.h     $(RM_H)             \
-	     $(INCL)/vision.h   $(INCL)/wintype.h  $(INCL)/engrave.h   \
-	     $(INCL)/rect.h     $(INCL)/hack.h     $(REGION_H)         \
-	     $(INCL)/sys.h
+	     $(INCL)/defsym.h   $(INCL)/mkroom.h   $(INCL)/nhconst.h   \
+	     $(INCL)/objclass.h $(INCL)/trap.h     $(INCL)/flag.h      \
+	     $(RM_H)            $(INCL)/vision.h   $(INCL)/wintype.h   \
+	     $(INCL)/engrave.h  $(INCL)/rect.h     $(INCL)/hack.h      \
+	     $(REGION_H)        $(INCL)/sys.h
 DLB_H      = $(INCL)/dlb.h
 
 ifeq ($(SUPPRESS_GRAPHICS),Y)
