--- a/sys/windows/Makefile.nmake
+++ b/sys/windows/Makefile.nmake
@@ -1128,7 +1128,7 @@ HACK_H = $(CONFIG_H) $(INCL)align.h $(INCL)artilist.h \
 	$(INCL)skills.h $(INCL)sndprocs.h $(INCL)spell.h \
 	$(INCL)stairs.h $(INCL)sym.h $(INCL)sys.h \
 	$(INCL)timeout.h $(INCL)trap.h $(INCL)vision.h \
-	$(INCL)\weight.h $(INCL)winprocs.h $(INCL)wintype.h \
+	$(INCL)weight.h $(INCL)winprocs.h $(INCL)wintype.h \
 	$(INCL)you.h $(INCL)youprop.h
 
 TILE_H      = $(WSHR)tile.h
