GNUmakefile requires slashes between macro and file

--- a/sys/windows/GNUmakefile
+++ b/sys/windows/GNUmakefile
@@ -536,7 +536,7 @@ $(GAMEDIR)/recover.exe: $(ROBJS) $(HLHACKLIB) | $(GAMEDIR)
 
 $(OR)/recover.o: $(U)recover.c | $(OR)
 	$(cc) $(CFLAGSU) $< -o$@
-$(OR)/rversion.o: $(SRC)version.c | $(OR)
+$(OR)/rversion.o: $(SRC)/version.c | $(OR)
 	$(cc) $(CFLAGSU) -DMINIMAL_FOR_RECOVER $< -o$@
 
 # $(OR):
