--- a/sys/windows/Makefile.nmake
+++ b/sys/windows/Makefile.nmake
@@ -846,34 +846,34 @@ TTYOBJTTY = $(OTTY)topl.o $(OTTY)getline.o  $(OTTY)wintty.o
 COREOBJTTY = \
 	$(OTTY)allmain.o  $(OTTY)alloc.o    $(OTTY)apply.o    $(OTTY)artifact.o \
 	$(OTTY)attrib.o   $(OTTY)ball.o     $(OTTY)bones.o    $(OTTY)botl.o \
-	$(OTTY)calendar.o $(OTTY)cmd.o      $(OTTY)coloratt.o $(OTTY)dbridge.o \
-	$(OTTY)decl.o     $(OTTY)detect.o   $(OTTY)dig.o      $(OTTY)display.o \
-	$(OTTY)do.o       $(OTTY)do_name.o  $(OTTY)do_wear.o  $(OTTY)dog.o \
-	$(OTTY)dogmove.o  $(OTTY)dokick.o   $(OTTY)dothrow.o  $(OTTY)drawing.o \
-	$(OTTY)dungeon.o  $(OTTY)eat.o      $(OTTY)end.o      $(OTTY)engrave.o \
-	$(OTTY)exper.o    $(OTTY)explode.o  $(OTTY)extralev.o $(OTTY)files.o \
-	$(OTTY)fountain.o $(OTTY)getpos.o   $(OTTY)glyphs.o   $(OTTY)hack.o \
-	$(OTTY)insight.o  $(OTTY)invent.o   $(OTTY)isaac64.o  $(OTTY)light.o \
-	$(OTTY)lock.o     $(OTTY)mail.o     $(OTTY)makemon.o  $(OTTY)mcastu.o \
-	$(OTTY)mhitm.o    $(OTTY)mhitu.o    $(OTTY)minion.o   $(OTTY)mklev.o \
-	$(OTTY)mkmap.o    $(OTTY)mkmaze.o   $(OTTY)mkobj.o    $(OTTY)mkroom.o \
-	$(OTTY)mon.o      $(OTTY)mondata.o  $(OTTY)monmove.o  $(OTTY)monst.o \
-	$(OTTY)mplayer.o  $(OTTY)mthrowu.o  $(OTTY)muse.o     $(OTTY)music.o \
-	$(OTTY)o_init.o   $(OTTY)objects.o  $(OTTY)objnam.o   $(OTTY)options.o \
-	$(OTTY)pager.o    $(OTTY)pickup.o   $(OTTY)pline.o    $(OTTY)polyself.o \
-	$(OTTY)potion.o   $(OTTY)pray.o     $(OTTY)priest.o   $(OTTY)quest.o \
-	$(OTTY)questpgr.o $(OTTY)read.o     $(OTTY)rect.o     $(OTTY)region.o \
-	$(OTTY)report.o $(OTTY)restore.o    $(OTTY)rip.o      $(OTTY)rnd.o \
-	$(OTTY)role.o     $(OTTY)rumors.o   $(OTTY)save.o     $(OTTY)selvar.o \
-	$(OTTY)sfstruct.o $(OTTY)shk.o      $(OTTY)shknam.o   $(OTTY)sit.o \
-	$(OTTY)sounds.o   $(OTTY)sp_lev.o   $(OTTY)spell.o    $(OTTY)stairs.o \
-	$(OTTY)steal.o    $(OTTY)steed.o    $(OTTY)strutil.o  $(OTTY)symbols.o \
-	$(OTTY)sys.o      $(OTTY)teleport.o $(OTTY)timeout.o  $(OTTY)topten.o \
-	$(OTTY)track.o    $(OTTY)trap.o     $(OTTY)u_init.o   $(OTTY)uhitm.o \
-	$(OTTY)utf8map.o  $(OTTY)vault.o    $(OTTY)vision.o   $(OTTY)weapon.o \
-	$(OTTY)were.o     $(OTTY)wield.o    $(OTTY)windows.o  $(OTTY)wizard.o \
-	$(OTTY)wizcmds.o   $(OTTY)worm.o     $(OTTY)worn.o    $(OTTY)write.o \
-	$(OTTY)zap.o
+	$(OTTY)calendar.o $(OTTY)cfgfiles.o $(OTTY)cmd.o      $(OTTY)coloratt.o \
+	$(OTTY)dbridge.o  $(OTTY)decl.o     $(OTTY)detect.o   $(OTTY)dig.o \
+	$(OTTY)display.o  $(OTTY)do.o       $(OTTY)do_name.o  $(OTTY)do_wear.o \
+	$(OTTY)dog.o      $(OTTY)dogmove.o  $(OTTY)dokick.o   $(OTTY)dothrow.o \
+	$(OTTY)drawing.o  $(OTTY)dungeon.o  $(OTTY)eat.o      $(OTTY)end.o \
+	$(OTTY)engrave.o  $(OTTY)exper.o    $(OTTY)explode.o  $(OTTY)extralev.o \
+	$(OTTY)files.o    $(OTTY)fountain.o $(OTTY)getpos.o   $(OTTY)glyphs.o \
+	$(OTTY)hack.o     $(OTTY)insight.o  $(OTTY)invent.o   $(OTTY)isaac64.o \
+	$(OTTY)light.o    $(OTTY)lock.o     $(OTTY)mail.o     $(OTTY)makemon.o \
+	$(OTTY)mcastu.o   $(OTTY)mhitm.o    $(OTTY)mhitu.o    $(OTTY)minion.o \
+	$(OTTY)mklev.o    $(OTTY)mkmap.o    $(OTTY)mkmaze.o   $(OTTY)mkobj.o \
+	$(OTTY)mkroom.o   $(OTTY)mon.o      $(OTTY)mondata.o  $(OTTY)monmove.o \
+	$(OTTY)monst.o    $(OTTY)mplayer.o  $(OTTY)mthrowu.o  $(OTTY)muse.o \
+	$(OTTY)music.o    $(OTTY)o_init.o   $(OTTY)objects.o  $(OTTY)objnam.o \
+	$(OTTY)options.o  $(OTTY)pager.o    $(OTTY)pickup.o   $(OTTY)pline.o \
+	$(OTTY)polyself.o $(OTTY)potion.o   $(OTTY)pray.o     $(OTTY)priest.o \
+	$(OTTY)quest.o    $(OTTY)questpgr.o $(OTTY)read.o     $(OTTY)rect.o \
+	$(OTTY)region.o   $(OTTY)report.o   $(OTTY)restore.o  $(OTTY)rip.o \
+	$(OTTY)rnd.o      $(OTTY)role.o     $(OTTY)rumors.o   $(OTTY)save.o \
+	$(OTTY)selvar.o   $(OTTY)sfstruct.o $(OTTY)shk.o      $(OTTY)shknam.o \
+	$(OTTY)sit.o      $(OTTY)sounds.o   $(OTTY)sp_lev.o   $(OTTY)spell.o \
+	$(OTTY)stairs.o   $(OTTY)steal.o    $(OTTY)steed.o    $(OTTY)strutil.o \
+	$(OTTY)symbols.o  $(OTTY)sys.o      $(OTTY)teleport.o $(OTTY)timeout.o \
+	$(OTTY)topten.o   $(OTTY)track.o    $(OTTY)trap.o     $(OTTY)u_init.o \
+	$(OTTY)uhitm.o    $(OTTY)utf8map.o  $(OTTY)vault.o    $(OTTY)vision.o \
+	$(OTTY)weapon.o   $(OTTY)were.o     $(OTTY)wield.o    $(OTTY)windows.o \
+	$(OTTY)wizard.o   $(OTTY)wizcmds.o  $(OTTY)worm.o     $(OTTY)worn.o \
+	$(OTTY)write.o    $(OTTY)zap.o
 
 OBJSTTY = $(MDLIBTTY) $(COREOBJTTY) $(REGEXTTY) $(RANDOMTTY)
 
@@ -909,34 +909,34 @@ GUIOBJ	= $(OGUI)mhaskyn.o $(OGUI)mhdlg.o \
 COREOBJGUI = \
 	$(OGUI)allmain.o  $(OGUI)alloc.o    $(OGUI)apply.o    $(OGUI)artifact.o \
 	$(OGUI)attrib.o   $(OGUI)ball.o     $(OGUI)bones.o    $(OGUI)botl.o \
-	$(OGUI)calendar.o $(OGUI)cmd.o      $(OGUI)coloratt.o $(OGUI)dbridge.o \
-	$(OGUI)decl.o     $(OGUI)detect.o   $(OGUI)dig.o      $(OGUI)display.o \
-	$(OGUI)do.o       $(OGUI)do_name.o  $(OGUI)do_wear.o  $(OGUI)dog.o \
-	$(OGUI)dogmove.o  $(OGUI)dokick.o   $(OGUI)dothrow.o  $(OGUI)drawing.o \
-	$(OGUI)dungeon.o  $(OGUI)eat.o      $(OGUI)end.o      $(OGUI)engrave.o \
-	$(OGUI)exper.o    $(OGUI)explode.o  $(OGUI)extralev.o $(OGUI)files.o \
-	$(OGUI)fountain.o $(OGUI)getpos.o   $(OGUI)glyphs.o   $(OGUI)hack.o \
-	$(OGUI)insight.o  $(OGUI)invent.o   $(OGUI)isaac64.o  $(OGUI)light.o \
-	$(OGUI)lock.o     $(OGUI)mail.o     $(OGUI)makemon.o  $(OGUI)mcastu.o \
-	$(OGUI)mhitm.o    $(OGUI)mhitu.o    $(OGUI)minion.o   $(OGUI)mklev.o \
-	$(OGUI)mkmap.o    $(OGUI)mkmaze.o   $(OGUI)mkobj.o    $(OGUI)mkroom.o \
-	$(OGUI)mon.o      $(OGUI)mondata.o  $(OGUI)monmove.o  $(OGUI)monst.o \
-	$(OGUI)mplayer.o  $(OGUI)mthrowu.o  $(OGUI)muse.o     $(OGUI)music.o \
-	$(OGUI)o_init.o   $(OGUI)objects.o  $(OGUI)objnam.o   $(OGUI)options.o \
-	$(OGUI)pager.o    $(OGUI)pickup.o   $(OGUI)pline.o    $(OGUI)polyself.o \
-	$(OGUI)potion.o   $(OGUI)pray.o     $(OGUI)priest.o   $(OGUI)quest.o \
-	$(OGUI)questpgr.o $(OGUI)read.o     $(OGUI)rect.o     $(OGUI)region.o \
-	$(OGUI)report.o   $(OGUI)restore.o  $(OGUI)rip.o      $(OGUI)rnd.o \
-	$(OGUI)role.o     $(OGUI)rumors.o   $(OGUI)save.o     $(OGUI)selvar.o \
-	$(OGUI)sfstruct.o $(OGUI)shk.o      $(OGUI)shknam.o   $(OGUI)sit.o \
-	$(OGUI)sounds.o   $(OGUI)sp_lev.o   $(OGUI)spell.o    $(OGUI)stairs.o \
-	$(OGUI)steal.o    $(OGUI)steed.o    $(OGUI)strutil.o  $(OGUI)symbols.o \
-	$(OGUI)sys.o      $(OGUI)teleport.o $(OGUI)timeout.o  $(OGUI)topten.o \
-	$(OGUI)track.o    $(OGUI)trap.o     $(OGUI)u_init.o   $(OGUI)uhitm.o \
-	$(OGUI)utf8map.o  $(OGUI)vault.o    $(OGUI)vision.o   $(OGUI)weapon.o \
-	$(OGUI)were.o     $(OGUI)wield.o    $(OGUI)windows.o  $(OGUI)wizard.o \
-	$(OGUI)wizcmds.o  $(OGUI)worm.o     $(OGUI)worn.o     $(OGUI)write.o \
-	$(OGUI)zap.o
+	$(OGUI)calendar.o $(OGUI)cfgfiles.o $(OGUI)cmd.o      $(OGUI)coloratt.o \
+	$(OGUI)dbridge.o  $(OGUI)decl.o     $(OGUI)detect.o   $(OGUI)dig.o \
+	$(OGUI)display.o  $(OGUI)do.o       $(OGUI)do_name.o  $(OGUI)do_wear.o \
+	$(OGUI)dog.o      $(OGUI)dogmove.o  $(OGUI)dokick.o   $(OGUI)dothrow.o \
+	$(OGUI)drawing.o  $(OGUI)dungeon.o  $(OGUI)eat.o      $(OGUI)end.o \
+	$(OGUI)engrave.o  $(OGUI)exper.o    $(OGUI)explode.o  $(OGUI)extralev.o \
+	$(OGUI)files.o    $(OGUI)fountain.o $(OGUI)getpos.o   $(OGUI)glyphs.o \
+	$(OGUI)hack.o     $(OGUI)insight.o  $(OGUI)invent.o   $(OGUI)isaac64.o \
+	$(OGUI)light.o    $(OGUI)lock.o     $(OGUI)mail.o     $(OGUI)makemon.o \
+	$(OGUI)mcastu.o   $(OGUI)mhitm.o    $(OGUI)mhitu.o    $(OGUI)minion.o \
+	$(OGUI)mklev.o    $(OGUI)mkmap.o    $(OGUI)mkmaze.o   $(OGUI)mkobj.o \
+	$(OGUI)mkroom.o   $(OGUI)mon.o      $(OGUI)mondata.o  $(OGUI)monmove.o \
+	$(OGUI)monst.o    $(OGUI)mplayer.o  $(OGUI)mthrowu.o  $(OGUI)muse.o \
+	$(OGUI)music.o    $(OGUI)o_init.o   $(OGUI)objects.o  $(OGUI)objnam.o \
+	$(OGUI)options.o  $(OGUI)pager.o    $(OGUI)pickup.o   $(OGUI)pline.o \
+	$(OGUI)polyself.o $(OGUI)potion.o   $(OGUI)pray.o     $(OGUI)priest.o \
+	$(OGUI)quest.o    $(OGUI)questpgr.o $(OGUI)read.o     $(OGUI)rect.o \
+	$(OGUI)region.o   $(OGUI)report.o   $(OGUI)restore.o  $(OGUI)rip.o \
+	$(OGUI)rnd.o      $(OGUI)role.o     $(OGUI)rumors.o   $(OGUI)save.o \
+	$(OGUI)selvar.o   $(OGUI)sfstruct.o $(OGUI)shk.o      $(OGUI)shknam.o \
+	$(OGUI)sit.o      $(OGUI)sounds.o   $(OGUI)sp_lev.o   $(OGUI)spell.o \
+	$(OGUI)stairs.o   $(OGUI)steal.o    $(OGUI)steed.o    $(OGUI)strutil.o \
+	$(OGUI)symbols.o  $(OGUI)sys.o      $(OGUI)teleport.o $(OGUI)timeout.o \
+	$(OGUI)topten.o   $(OGUI)track.o    $(OGUI)trap.o     $(OGUI)u_init.o \
+	$(OGUI)uhitm.o    $(OGUI)utf8map.o  $(OGUI)vault.o    $(OGUI)vision.o \
+	$(OGUI)weapon.o   $(OGUI)were.o     $(OGUI)wield.o    $(OGUI)windows.o \
+	$(OGUI)wizard.o   $(OGUI)wizcmds.o  $(OGUI)worm.o     $(OGUI)worn.o \
+	$(OGUI)write.o    $(OGUI)zap.o
 
 OBJSGUI   = $(MDLIBGUI) $(COREOBJGUI) $(REGEXGUI) $(RANDOMGUI)
 
@@ -2962,6 +2962,7 @@ $(OTTY)ball.o: ball.c $(HACK_H)
 $(OTTY)bones.o: bones.c $(HACK_H)
 $(OTTY)botl.o: botl.c $(HACK_H)
 $(OTTY)calendar.o: calendar.c $(HACK_H)
+$(OTTY)cfgfiles.o: cfgfiles.c $(HACK_H)
 $(OTTY)cmd.o: cmd.c $(HACK_H) $(INCL)func_tab.h
 $(OTTY)coloratt.o: coloratt.c $(HACK_H)
 $(OTTY)dbridge.o: dbridge.c $(HACK_H)
@@ -3338,6 +3339,7 @@ $(OGUI)ball.o: ball.c $(HACK_H)
 $(OGUI)bones.o: bones.c $(HACK_H)
 $(OGUI)botl.o: botl.c $(HACK_H)
 $(OGUI)calendar.o: calendar.c $(HACK_H)
+$(OGUI)cfgfiles.o: cfgfiles.c $(HACK_H)
 $(OGUI)cmd.o: cmd.c $(HACK_H) $(INCL)func_tab.h
 $(OGUI)coloratt.o: coloratt.c $(HACK_H)
 $(OGUI)dbridge.o: dbridge.c $(HACK_H)
