--- a/sys/msdos/Makefile.GCC
+++ b/sys/msdos/Makefile.GCC
@@ -272,31 +272,31 @@ DLBOBJ = $(O)dlb.o
 
 
 VOBJ01 = $(O)allmain.o  $(O)alloc.o    $(O)apply.o    $(O)artifact.o $(O)attrib.o
-VOBJ02 = $(O)ball.o     $(O)bones.o    $(O)botl.o     $(O)calendar.o $(O)cmd.o
-VOBJ03 = $(O)coloratt.o $(O)date.o     $(O)dbridge.o  $(O)decl.o     $(O)detect.o
-VOBJ04 = $(O)dig.o      $(O)display.o  $(O)do.o       $(O)do_name.o  $(O)do_wear.o
-VOBJ05 = $(O)dog.o      $(O)dogmove.o  $(O)dokick.o   $(O)dothrow.o  $(O)drawing.o
-VOBJ06 = $(O)dungeon.o  $(O)eat.o      $(O)end.o      $(O)engrave.o  $(O)exper.o
-VOBJ07 = $(O)explode.o  $(O)extralev.o $(O)files.o    $(O)fountain.o $(O)getpos.o
-VOBJ08 = $(O)glyphs.o   $(O)getline.o  $(O)hack.o     $(O)hacklib.o  $(O)insight.o
-VOBJ09 = $(O)invent.o   $(O)isaac64.o  $(O)lock.o     $(O)mail.o     $(O)main.o
-VOBJ10 = $(O)makemon.o  $(O)mcastu.o   $(O)mdlib.o    $(O)mhitm.o    $(O)mhitu.o
-VOBJ11 = $(O)minion.o   $(O)mkmap.o    $(O)mklev.o    $(O)mkmaze.o   $(O)mkobj.o
-VOBJ12 = $(O)mkroom.o   $(O)mon.o      $(O)mondata.o  $(O)monmove.o  $(O)monst.o
-VOBJ13 = $(O)mplayer.o  $(O)mthrowu.o  $(O)muse.o     $(O)music.o    $(O)o_init.o
-VOBJ14 = $(O)objects.o  $(O)objnam.o   $(O)options.o  $(O)pickup.o   $(O)pline.o
-VOBJ15 = $(O)polyself.o $(O)potion.o   $(O)quest.o    $(O)questpgr.o $(O)pager.o
-VOBJ16 = $(O)pray.o     $(O)priest.o   $(O)read.o     $(O)rect.o     $(O)region.o
-VOBJ17 = $(O)report.o   $(O)restore.o  $(O)rip.o      $(O)rnd.o      $(O)role.o
-VOBJ18 = $(O)rumors.o   $(O)save.o     $(O)selvar.o   $(O)sfstruct.o $(O)shk.o
-VOBJ19 = $(O)shknam.o   $(O)sit.o      $(O)sounds.o   $(O)sp_lev.o   $(O)spell.o
-VOBJ20 = $(O)stairs.o   $(O)steal.o    $(O)steed.o    $(O)symbols.o  $(O)sys.o
-VOBJ21 = $(O)teleport.o $(O)strutil.o  $(O)termcap.o  $(O)timeout.o  $(O)topl.o
-VOBJ22 = $(O)topten.o   $(O)trap.o     $(O)u_init.o   $(O)uhitm.o    $(O)utf8map.o
-VOBJ23 = $(O)vault.o    $(O)track.o    $(O)vision.o   $(O)weapon.o   $(O)were.o
-VOBJ24 = $(O)wield.o    $(O)windows.o  $(O)wintty.o   $(O)wizard.o   $(O)wizcmds.o
-VOBJ25 = $(O)worm.o     $(O)worn.o     $(O)write.o    $(O)zap.o      $(O)light.o
-VOBJ26 = $(O)dlb.o      $(REGEX)
+VOBJ02 = $(O)ball.o     $(O)bones.o    $(O)botl.o     $(O)calendar.o $(O)cfgfiles.o
+VOBJ03 = $(O)cmd.o      $(O)coloratt.o $(O)date.o     $(O)dbridge.o  $(O)decl.o
+VOBJ04 = $(O)detect.o   $(O)dig.o      $(O)display.o  $(O)do.o       $(O)do_name.o
+VOBJ05 = $(O)do_wear.o  $(O)dog.o      $(O)dogmove.o  $(O)dokick.o   $(O)dothrow.o
+VOBJ06 = $(O)drawing.o  $(O)dungeon.o  $(O)eat.o      $(O)end.o      $(O)engrave.o
+VOBJ07 = $(O)exper.o    $(O)explode.o  $(O)extralev.o $(O)files.o    $(O)fountain.o
+VOBJ08 = $(O)getpos.o   $(O)glyphs.o   $(O)getline.o  $(O)hack.o     $(O)hacklib.o
+VOBJ09 = $(O)insight.o  $(O)invent.o   $(O)isaac64.o  $(O)lock.o     $(O)mail.o
+VOBJ10 = $(O)main.o     $(O)makemon.o  $(O)mcastu.o   $(O)mdlib.o    $(O)mhitm.o
+VOBJ11 = $(O)mhitu.o    $(O)minion.o   $(O)mkmap.o    $(O)mklev.o    $(O)mkmaze.o
+VOBJ12 = $(O)mkobj.o    $(O)mkroom.o   $(O)mon.o      $(O)mondata.o  $(O)monmove.o
+VOBJ13 = $(O)monst.o    $(O)mplayer.o  $(O)mthrowu.o  $(O)muse.o     $(O)music.o
+VOBJ14 = $(O)o_init.o   $(O)objects.o  $(O)objnam.o   $(O)options.o  $(O)pickup.o
+VOBJ15 = $(O)pline.o    $(O)polyself.o $(O)potion.o   $(O)quest.o    $(O)questpgr.o
+VOBJ16 = $(O)pager.o    $(O)pray.o     $(O)priest.o   $(O)read.o     $(O)rect.o
+VOBJ17 = $(O)region.o   $(O)report.o   $(O)restore.o  $(O)rip.o      $(O)rnd.o
+VOBJ18 = $(O)role.o     $(O)rumors.o   $(O)save.o     $(O)selvar.o   $(O)sfstruct.o
+VOBJ19 = $(O)shk.o      $(O)shknam.o   $(O)sit.o      $(O)sounds.o   $(O)sp_lev.o
+VOBJ20 = $(O)spell.o    $(O)stairs.o   $(O)steal.o    $(O)steed.o    $(O)symbols.o
+VOBJ21 = $(O)sys.o      $(O)teleport.o $(O)strutil.o  $(O)termcap.o  $(O)timeout.o
+VOBJ22 = $(O)topl.o     $(O)topten.o   $(O)trap.o     $(O)u_init.o   $(O)uhitm.o
+VOBJ23 = $(O)utf8map.o  $(O)vault.o    $(O)track.o    $(O)vision.o   $(O)weapon.o
+VOBJ24 = $(O)were.o     $(O)wield.o    $(O)windows.o  $(O)wintty.o   $(O)wizard.o
+VOBJ25 = $(O)wizcmds.o  $(O)worm.o     $(O)worn.o     $(O)write.o    $(O)zap.o
+VOBJ26 = $(O)light.o    $(O)dlb.o      $(REGEX)
 
 SOBJ   = $(O)msdos.o    $(O)pcsys.o    $(O)tty.o	    $(O)unix.o \
 	 $(O)video.o    $(O)vidtxt.o  $(O)pckeys.o
